Created basic HTML and CSS outline for the rest of my pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <div class="container">
         <div class="grid_item" id="top_left">1</div>
         <div class="grid_item" id="top_middle">
-            <div id="header"></div>
             <div id="header_2">
                 <h1 class="header_name">Muhammad Omar Muhdhar</h1>
             </div>
@@ -20,8 +19,8 @@
         <div class="grid_item">
             <div class="navbar">
                 <div class="main_navbar">
-                    <a href="#">About</a>
-                    <a href="#">Projects</a>
+                    <a href="index.html">About</a>
+                    <a href="./Projects/projects.html">Projects</a>
                     <a href="#">Blog</a>
                     <a href="#">Photo-Gallery</a>
                     <a href="#">Brutalism</a>
@@ -51,7 +50,7 @@
                     </div>
                 </div>
                 <div class="about_picture">
-                    <img class="portfolio_picture" src="Muhammad Edited.jpg" alt="this is where you insert alternative text to an image" height="550" width= auto>
+                    <img class="portfolio_picture" src="Muhammad Edited.jpg" alt="this is where you insert alternative text to an image" height="450" width= auto>
                 </div>
             </div>
 
